--- a/webui/applications/grid/views/default/upload.html
+++ b/webui/applications/grid/views/default/upload.html
@@ -1,26 +1,19 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<!-- Force latest IE rendering engine or ChromeFrame if installed -->
-<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
 <meta charset="utf-8">
-<title>Multiupload</title>
-
-<!-- Bootstrap CSS Toolkit styles -->
+<title>Text Grid Uploader</title>
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-<!-- Generic page styles -->
-    <link rel="stylesheet" href="{{=URL('static/jQuery-File-Upload','css/style.css')}}">
-<!-- Bootstrap styles for responsive website layout, supporting different screen sizes -->
+<link rel="stylesheet" href="{{=URL('static/jQuery-File-Upload','css/style.css')}}">
 <link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
-<!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
 <link rel="stylesheet" href="{{=URL('static/jQuery-File-Upload','css/jquery.fileupload-ui.css')}}">
-<!-- CSS adjustments for browsers with JavaScript disabled -->
 <noscript><link rel="stylesheet" href="{{=URL('static/jQuery-File-Upload','css/jquery.fileupload-ui-noscript.css')}}"></noscript>
-<!-- Shim to make HTML5 elements usable in older Internet Explorer versions -->
-<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
-<body>
 
+<body>
+    <div class="container" style="background-color:rgb(238, 238, 238)">
+    <h1>Upload Form</h1>
+    <p>Files must be in group.filename.xml format, so it can be analysed by the program. Note that the groups are available just in session and after that you have to reupload your files. If you work on a same computer, to get a new session close and open the browser again or just delete this website cookie. With this uploader you can select multiple files.</p>
 <!-- The file upload form used as target for the file upload widget -->
     <form id="fileupload" action="#" method="POST" enctype="multipart/form-data">
         <!-- Redirect browsers with JavaScript disabled -->
@@ -28,25 +21,11 @@
         <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
         <div class="row fileupload-buttonbar">
             <div class="span7">
-                <!-- The fileinput-button span is used to style the file input field as button -->
                 <span class="btn btn-success fileinput-button">
                     <i class="icon-plus icon-white"></i>
                     <span>Add files...</span>
                     <input type="file" name="files[]" multiple>
                 </span>
-                <button type="submit" class="btn btn-primary start">
-                    <i class="icon-upload icon-white"></i>
-                    <span>Start upload</span>
-                </button>
-                <button type="reset" class="btn btn-warning cancel">
-                    <i class="icon-ban-circle icon-white"></i>
-                    <span>Cancel upload</span>
-                </button>
-                <button type="button" class="btn btn-danger delete">
-                    <i class="icon-trash icon-white"></i>
-                    <span>Delete</span>
-                </button>
-                <input type="checkbox" class="toggle">
             </div>
             <!-- The global progress information -->
             <div class="span5 fileupload-progress fade">
@@ -64,6 +43,7 @@
         <!-- The table listing the files available for upload/download -->
         <table role="presentation" class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody></table>
     </form>
+    </div>
     
 <!-- modal-gallery is the modal dialog used for the image gallery -->
 <div id="modal-gallery" class="modal modal-gallery hide fade" data-filter=":odd" tabindex="-1">
@@ -154,28 +134,24 @@
 </script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
-    <script src="{{=URL('static/jQuery-File-Upload','js/vendor/jquery.ui.widget.js')}}"></script>
-<!-- The Templates plugin is included to render the upload/download listings -->
+<script src="{{=URL('static/jQuery-File-Upload','js/vendor/jquery.ui.widget.js')}}"></script>
 <script src="http://blueimp.github.io/JavaScript-Templates/js/tmpl.min.js"></script>
-<!-- The Load Image plugin is included for the preview images and image resizing functionality -->
 <script src="http://blueimp.github.io/JavaScript-Load-Image/js/load-image.min.js"></script>
-<!-- The Canvas to Blob plugin is included for image resizing functionality -->
 <script src="http://blueimp.github.io/JavaScript-Canvas-to-Blob/js/canvas-to-blob.min.js"></script>
-<!-- Bootstrap JS and Bootstrap Image Gallery are not required, but included for the demo -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="http://blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
-<!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
 <script src="{{=URL('static/jQuery-File-Upload','js/jquery.iframe-transport.js')}}"></script>
-<!-- The basic File Upload plugin -->
 <script src="{{=URL('static/jQuery-File-Upload','js/jquery.fileupload.js')}}"></script>
-<!-- The File Upload file processing plugin -->
 <script src="{{=URL('static/jQuery-File-Upload','js/jquery.fileupload-fp.js')}}"></script>
-<!-- The File Upload user interface plugin -->
 <script src="{{=URL('static/jQuery-File-Upload','js/jquery.fileupload-ui.js')}}"></script>
-<!-- The main application script -->
 <script src="{{=URL('static/jQuery-File-Upload','js/main.js')}}"></script>
-<!-- The XDomainRequest Transport is included for cross-domain file deletion for IE8+ -->
-<!--[if gte IE 8]><script src="js/cors/jquery.xdr-transport.js"></script><![endif]-->
+<div class="container" style="background-color:rgb(245, 245, 245);margin-top:15px">
+<p class="text-muted credit" style="padding-top:15px">
+<span dir="ltr">
+Code is open source and can be <a href="https://github.com/pouyana/teireader/archive/master.zip">downloaded</a>.
+</span>
+</p>
+</div>
+</div>
 </body> 
 </html>
