new branch session test

--- a/webui/applications/grid/views/default/analyse.html
+++ b/webui/applications/grid/views/default/analyse.html
@@ -32,6 +32,7 @@
 <span dir="ltr">
 Code is open source and can be <a href="https://github.com/pouyana/teireader/archive/master.zip">downloaded</a>.
 </span>
+<span class="pull-right">Session:{{=session_id}}</span>
 </p>
 </div>
 </div>
