html view added, debug and etc

--- a/webui/applications/grid/views/default/analyse.html
+++ b/webui/applications/grid/views/default/analyse.html
@@ -40,7 +40,19 @@
   			{{pass}}
 		{{pass}}
 		</table>
-		</div>
+		{{if(i["address"]!="no-address"):}}
+		<table class="table">
+                <tr><th>Speaker (500)</th><th>Median (500)</th></tr>
+                </thead>
+			{{for value in i["whole_stats"]["median_cul"]:}}
+			<tr><td>{{=value["speaker"]}}</td><td>{{=value["median"]}}</tr>
+			{{pass}}
+                <tr><th>Speaker (500)</th><th>Average (500)</th></tr>
+		         {{for value in i["whole_stats"]["average_cul"]:}}
+                        <tr><td>{{=value["speaker"]}}</td><td>{{=value["average"]}}</tr>
+                        {{pass}}
+                </table>
+		{{pass}}
 		{{pass}}
 		</div>
 	{{pass}}
